#13 #56 bugfix stacked groups with scrollbar

--- a/chrome/skin/common/tabview-frame.css
+++ b/chrome/skin/common/tabview-frame.css
@@ -222,10 +222,6 @@ body.DraggingTab .tab * {
 
 .stacked {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
 	overflow: visible;
 }
 
@@ -358,6 +354,7 @@ body:not(.grid) .groupItem:not(.phantom) {
 .groupItem.stackedGroup .tab-container {
 	/* leave space for the stack expander */
 	height: calc(100% - 32px);
+	overflow-y: hidden;
 }
 
 .undo {
